[workspace]
resolver = "3"
members = ["crates/domain", "crates/platform/linux"]

[workspace.dependencies]
bitflags = { version = "2.6.0" }
getset = { version = "0.1.3" }
microps = { path = "crates/domain" }
rand = { version = "0.9.2" }
signal-hook = { version = "0.3.18" }
thiserror = { version = "2.0.12", default-features = false }
